@@ -29,6 +29,7 @@ Version 1.3.1+svn:
       as intended).
     * Fix some glitches when scrolling or zooming the map.
     * Flying units are no longer buried in a castle.
+    * Fixed the position of some halos when a unit was in a keep or castle.
 
   * Units changes and balancing:
     * Converted the cold resistance of the Elvish Sorceress line to a holy
